force-app/main/default/objects/DIA_Case_History__c/DIA_Case_History__c.object-meta.xml
<CustomObject>
    <label>DIA Case History</label>
    <nameField>
        <displayFormat>DIACH-{000000}</displayFormat>
        <label>DIA Case History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Case History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>