force-app/main/default/objects/DIA_Case_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>DIA_Case__c</referenceTo>
    <relationshipLabel>Case History</relationshipLabel>
    <relationshipName>Case_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>